# vision-retrieval

./: .gitignore  LICENSE  README.md  create_dot_twopi_images.ipynb  flake.nix  imagegraph.ipynb  imagegraph.py  kialo_dataset.ipynb  ndcg.ipynb  pyproject.toml  test_alternative_representations.ipynb  test_vision_models.ipynb
data/: inspect.ipynb  kialo_dataset.ipynb  kialo_dataset.py  make-ds.ipynb  make-treemap-sat.py  make_treemap_Inodes.py  make_treemap_Snodes.py  random-graphs.py  simchange_and_scaling.ipynb  simchange_and_scaling_old.ipynb  test_treemap_Snodes.ipynb  treemap_dataset.py
eval/: .gitignore  README.md  build_ideal_mac_results.py  compare.py  correctness_completeness.py  eval_cli.py  eval_oai.py  eval_oai.sh  evaluate_torch_models.py  model.py  new_evaluation.py  plot.ipynb  plot_scaling_study.py  results.py  scaling.ipynb  simchange.ipynb
evaluate_cbr/: README.md  evaluate_models.ipynb  pyproject.toml  start.sh  tb.sh  train.sh
evaluate_cbr/evaluate_cbr/: casebase.py  deploy.ipynb  deploy.py  mac.py  model.py  text_embeddings.py  visualize.py
evaluate_cbr/new_eval/: calc_durations.ipynb  correctness_completeness.py  eval_oai.ipynb  eval_oai.py  load_trained_model.py  model.py  new_evaluation.py  plot.ipynb  results.py  run_eval.py  scaling.ipynb  simchange.ipynb
finetuning_experiments/: byol_training.py  finetune.ipynb  finetune.py  imagegraph.ipynb  imagegraph.py  simclr_pl_training.py  test_inference.ipynb
models/srip_best/: config.json
new_training_scripts/: finetune_all.py  finetuning.py  get_state_dicts.py  pretrain_all.py  pretraining.py  process.py  visualize_all.py
oai-finetuning/: make-ds.py  pyproject.toml  test.py
oai_finetuning/: make_training_dataset.py  pyproject.toml
pretrain_huggingface/: run.sh  run_mae.py  run_mae.sh  run_mim.py  run_mim_no_trainer.py
training/: README.md  export_safetensors_for_checkpoints.py  finetune_all.py  finetuning.py  launch_finetuning.py  launch_training.py  pretraining.py
training_notebooks/: 08-deep-autoencoders-ds-large.ipynb  08-deep-autoencoders-pretrain-treemap-32.ipynb  08-deep-autoencoders-pretrain-treemap-weak-32.ipynb  08-deep-autoencoders-pretrain-treemap.ipynb  08-deep-autoencoders-vit-ds-large.ipynb  08-deep-autoencoders-vit.ipynb  08-deep-autoencoders.ipynb  13-contrastive-learning-swin-ft-images.ipynb  13-contrastive-learning-swin-treemap-sat.ipynb  13-contrastive-learning-swin-treemap-weak.ipynb  13-contrastive-learning-swin-twopi-testgauss.ipynb  13-contrastive-learning-swin-twopi-testnoise.ipynb  13-contrastive-learning-swin-twopi-testpt.ipynb  13-contrastive-learning-swin-twopi.ipynb  13-contrastive-learning-vit.ipynb  13-contrastive-learning.ipynb  test_how_many_latent_dims.ipynb
vis/: README.md  compare.py  findvis.ipynb  gen_simchange_images.ipynb  gen_simchange_scaling_images.ipynb  generate_finetuning_datasets.py  logical.ipynb  logical.py  logical_srip_datasets.py  make_datasets.py  plot_scaling_study.py  random_graphs.py  random_srip.py  render.py  resize.py  scaling_study.py  srip.py  strip_spiral.ipynb  test.ipynb  treemap_dataset.py  treemaps.py  util.py  viewer.py  visualize_casebase.py
