[project]
authors = [
    {name = "Kilian Bartz"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "pytorch-metric-learning<3.0.0,>=2.4.1",
    "safetensors<1.0.0,>=0.4.1",
    "plotly<6.0.0,>=5.22.0",
    "datasets<3.0.0,>=2.19.1",
    "matplotlib<4.0.0,>=3.9.0",
    "arguebuf[cli]>=2.5.2,<3.0.0",
    "jsonlines<5.0.0,>=4.0.0",
    "torch<3.0.0,>=2.5.0",
    "lightning<3.0.0,>=2.4.0",
    "transformers<5.0.0,>=4.45.2",
    "torchvision<1.0.0,>=0.20.0",
    "python-dotenv<2.0.0,>=1.0.1",
    "openai<2.0.0,>=1.54.4",
    "ranx<1.0.0,>=0.3.20",
    "wandb>=0.19.8",
]
name = "ba"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "jupyter<2.0.0,>=1.1.1",
]
