[project]
name = "vision-retrieval"
version = "1.0.0"
authors = [{ name = "Kilian Bartz" }, { name = "Mirko Lenz" }]
requires-python = ">=3.12.3,<3.13"
dependencies = [
    "arguebuf[cli]>=2.5.2,<3.0.0",
    "datasets<3.0.0,>=2.19.1",
    "jsonlines<5.0.0,>=4.0.0",
    "jsonlines>=4.0.0,<5.0.0",
    "lightning<3.0.0,>=2.4.0",
    "matplotlib<4.0.0,>=3.9.0",
    "openai<2.0.0,>=1.54.4",
    "pillow>=11.0.0,<12.0.0",
    "plotly<6.0.0,>=5.22.0",
    "python-dotenv<2.0.0,>=1.0.1",
    "pytorch-metric-learning<3.0.0,>=2.4.1",
    "ranx<1.0.0,>=0.3.20",
    "safetensors<1.0.0,>=0.4.1",
    "torch<3.0.0,>=2.5.0",
    "torchvision<1.0.0,>=0.20.0",
    "transformers<5.0.0,>=4.45.2",
    "wandb>=0.19.8",
]

[dependency-groups]
dev = ["jupyter<2.0.0,>=1.1.1"]
